# ego-graph

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  coverage.xml  pr_data_v2.json  pyproject.toml  query_graph
backend/: .env.example  README.md  __init__.py  config.py  constants.py  context_files.py  dependencies.py  main.py  pyproject.toml  validators.py
backend/api/: __init__.py  browser_history.py  chat.py  data.py  deps.py  health.py  system_prompts.py  threads.py  youtube.py
backend/api/schemas/: __init__.py  browser_history.py  chat.py  data.py  llm_model.py
backend/configs/: __init__.py  llm_models.py
backend/database/: __init__.py  chat_connection.py  connection.py  queries.py
backend/dev_tools/: chat_cli.py
backend/domain/models/: __init__.py  chat.py  llm.py  llm_model.py
backend/domain/repositories/: __init__.py  thread_repository.py
backend/domain/services/: __init__.py  conversation_manager.py
backend/domain/tools/: __init__.py  base.py
backend/infrastructure/: __init__.py  context_files.py
backend/infrastructure/database/: __init__.py  (+4 more)
backend/llm/: __init__.py  client.py  models.py
backend/models/: __init__.py  llm_model.py  thread.py
backend/scripts/: run_tool_matrix.py  verify_lastfm_parquet.py  verify_parquet_read.py  verify_spotify_parquet.py  verify_youtube_parquet.py
backend/services/: __init__.py  thread_service.py
backend/tests/: conftest.py
backend/tools/: __init__.py  base.py  registry.py
backend/usecases/: spotify_stats.py
shared/: README.md  __init__.py  config.py  models.py  pyproject.toml  utils.py
shared/egograph/: __init__.py  __init__.py.bak  config.py  models.py  utils.py
shared/tests/: __init__.py  test_models.py  test_utils.py
(+644 files in other folders)
