[project]
name = "ego-graph-monorepo"
version = "0.1.0"
description = "EgoGraph Monorepo"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["shared", "ingest", "backend"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
# E: pycodestyle errors
# F: Pyflakes
# I: isort
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["ingest/tests", "backend/tests", "shared/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]
