[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "egograph-backend"
version = "0.1.0"
description = "Backend API for EgoGraph"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "egograph",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
egograph = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
]
