[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "egograph"
version = "0.1.0"
description = "Shared data models and utilities for EgoGraph"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "mypy>=1.14.0",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
